# python-blueprint

./: .dmypy.json  .gitignore  .pre-commit-config.yaml  .rooignore  .roorules  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/: STYLE_GUIDE.md  STYLE_GUIDE.typescript.md  copilot-code-generation-instructions.md  copilot-commit-message-instructions.md  copilot-pr-description-generation-instructions.md  copilot-review-selection-instructions.md
.github/workflows/: ci.yml
.roo/: mcp.json
experiments/experiment_name/: main.py
instructions/: 01_prompt.md  02_prompt.create_src_arch.md  03_prompt.update_src_arch.md  04_prompt.create_pr.md
src/risk_based_auth/: __init__.py
src/risk_based_auth/utils/: logger.py
